--- a/views/map-layout.jade
+++ b/views/map-layout.jade
@@ -131,8 +131,8 @@ html
   // Plugins Javascript situados al final de la página, así el contenido carga antes
   // JQuery y Bootstrap
   script.
-    var ip = '#{ip}';
-    var usuario_id = '#{locals.user ? locals.user._id : undefined}';
+    //var ip = '#{ip}';
+    //var usuario_id = '#{locals.user ? locals.user._id : undefined}';
   script(src='/javascripts/plugins/js-cookie/src/js.cookie.js')
   script(src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.1/jquery.min.js')
   script(src='//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js')
