Arreglando, ordenando, traduciendo...

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -107,11 +107,11 @@ html
                             span.caret
                           ul.dropdown-menu(style="width: 100%")
                             li.dropdown
-                              a(href="javascript:window.location.replace(window.location.href.split('?')[0].split('#')[0] + '?lang=es&' + (window.location.href.split('?').length > 1 && window.location.href.split('?')[1].match('lang') ? window.location.href.split('?')[1].replace(/&lang(=[^&]*)?|^lang(=[^&]*)?&?/, '') : window.location.href.split('?')[1]))") Castellano
+                              a(href="javascript:window.location.replace(window.location.href.split('?')[0].split('#')[0] + '?lang=es&' + (window.location.href.split('?').length > 1 && window.location.href.split('?')[1].match('lang') ? window.location.href.split('?')[1].replace(/&lang(=[^&]*)?|^lang(=[^&]*)?&?/, '') : (window.location.href.split('?')[1] ? window.location.href.split('?')[1] : '')))") Castellano
                             li.dropdown
-                              a(href="javascript:window.location.replace(window.location.href.split('?')[0].split('#')[0] + '?lang=val&' + (window.location.href.split('?').length > 1 && window.location.href.split('?')[1].match('lang') ? window.location.href.split('?')[1].replace(/&lang(=[^&]*)?|^lang(=[^&]*)?&?/, '') : window.location.href.split('?')[1]))") Valencià
+                              a(href="javascript:window.location.replace(window.location.href.split('?')[0].split('#')[0] + '?lang=val&' + (window.location.href.split('?').length > 1 && window.location.href.split('?')[1].match('lang') ? window.location.href.split('?')[1].replace(/&lang(=[^&]*)?|^lang(=[^&]*)?&?/, '') : (window.location.href.split('?')[1] ? window.location.href.split('?')[1] : '')))") Valencià
                             li.dropdown
-                              a(href="javascript:window.location.replace(window.location.href.split('?')[0].split('#')[0] + '?lang=en&' + (window.location.href.split('?').length > 1 && window.location.href.split('?')[1].match('lang') ? window.location.href.split('?')[1].replace(/&lang(=[^&]*)?|^lang(=[^&]*)?&?/, '') : window.location.href.split('?')[1]))") English
+                              a(href="javascript:window.location.replace(window.location.href.split('?')[0].split('#')[0] + '?lang=en&' + (window.location.href.split('?').length > 1 && window.location.href.split('?')[1].match('lang') ? window.location.href.split('?')[1].replace(/&lang(=[^&]*)?|^lang(=[^&]*)?&?/, '') : (window.location.href.split('?')[1] ? window.location.href.split('?')[1] : '')))") English
                 // navbar end
               // main-navigation end
             // header-right end
@@ -143,7 +143,7 @@ html
       span#numdenun  !{locals.datos_app.num_denun_total} 
       span#numusu.pull-right
     script.
-      var ip = '#{ip}';
+      //var ip = '#{ip}';
       var id_usuario = '#{id_usuario}';
     // Plugins Javascript situados al final de la página, así el contenido carga antes
     // JQuery y Bootstrap
@@ -166,8 +166,6 @@ html
     script(src='//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.0.0/highlight.min.js')
     // Bootstrap Select JS
     script(src='/javascripts/plugins/bootstrap-select/js/bootstrap-select.js')
-    // Mensajes del servidor flash
-    script(type="text/javascripts" src='/javascripts/mensajes_servidor.js')
     // SOCKET.IO
     script(src="https://cdn.socket.io/socket.io-1.3.7.js")
     // FUNCIONALIDADES SOCKET.IO
