--- a/views/layout_sin_cabecera.jade
+++ b/views/layout_sin_cabecera.jade
@@ -102,7 +102,7 @@ html
                               li.dropdown
                                 a(href="/app/logout") #{contenido.cerrar_sesion}
                         li(style="height: 100%")
-                          a(href='#' style="height: 70px;" data-toggle="dropdown") Idioma
+                          a(href='#' style="height: 70px;" data-toggle="dropdown") #{contenido.idioma}
                             span.caret
                           ul.dropdown-menu(style="width: 100%")
                             li.dropdown
