mas estructura, todo probado, funciona bien

--- a/views/base/map_layout.jade
+++ b/views/base/map_layout.jade
@@ -72,7 +72,7 @@ html
               i.fa.fa-home
               |  #{contenido.inicio}
           .menu-item.col-xs-12
-            a(href="/app/visor") 
+            a(href="/app/denuncias/visor") 
               i.fa.fa-globe
               |  #{contenido.visor_tiempo_real}
           .menu-item.col-xs-12
@@ -86,7 +86,7 @@ html
                 |  #{contenido.notificaciones}
                 span(style="margin-left: 5px;").badge.noti_up #{nuevas}
             .menu-item.col-xs-12
-              a(href="/app/perfil") 
+              a(href="/app/usuarios/perfil") 
                 i.fa.fa-user
                 |  #{contenido.mi_perfil}
             .menu-item.col-xs-12
@@ -94,7 +94,7 @@ html
                 i.fa.fa-plus-circle
                 |  #{contenido.nueva_denuncia}
             .menu-item.col-xs-12
-              a(href="/app/logout") 
+              a(href="/app/usuarios/logout") 
                 i.fa.fa-sign-out
                 |  #{contenido.cerrar_sesion}
     ul
