--- a/views/denuncias/denuncia.jade
+++ b/views/denuncias/denuncia.jade
@@ -1,4 +1,4 @@
-extends map-layout.jade
+extends ../base/map_layout
 block meta
 	meta(property='og:url' content='/app/denuncia/#{denuncia.gid}')
 	meta(property='og:type' content='website')
