--- a/views/base/layout.jade
+++ b/views/base/layout.jade
@@ -2,6 +2,7 @@ html
   head
     meta(charset='utf-8')
     // Para dispositivos móviles
+    link(rel='icon', href='/images/siteicon.png')
     meta(name='viewport', content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no')
     // Bootstrap CSS
     link(href='/stylesheets/bootstrap/css/bootstrap.css', rel='stylesheet')
@@ -80,7 +81,7 @@ html
                             a(href='/app/#olvidaste' style="height: 100%") #{contenido.olvidaste}
                         else
                           li(style="height: 100%")
-                            a(href='/app/visor' style="height: 100%") #{contenido.visor_tiempo_real}
+                            a(href='/app/denuncias/visor' style="height: 100%") #{contenido.visor_tiempo_real}
                           li(style="height: 100%")
                             a(href='/app/denuncias?page=1' style="height: 100%") #{contenido.denuncias}
                           li(style="height: 100%")
@@ -93,14 +94,14 @@ html
                                 span.caret
                             ul.dropdown-menu(style="width: 100%")
                               li.dropdown
-                                a(href="/app/perfil#headingOne") #{contenido.notificaciones}
-                                  span(style="float: right; margin-top: -20px;").badge.noti_up #{nuevas}
+                                a(href="/app/usuarios/perfil#headingOne") #{contenido.notificaciones}
+                                  span(style="margin-left : 5px").badge.noti_up #{nuevas}
                               li.dropdown
-                                a(href="/app/perfil") #{contenido.mi_perfil}
+                                a(href="/app/usuarios/perfil") #{contenido.mi_perfil}
                               li.dropdown
                                 a(href="/app/denuncias/nueva") #{contenido.nueva_denuncia}
                               li.dropdown
-                                a(href="/app/logout") #{contenido.cerrar_sesion}
+                                a(href="/app/usuarios/logout") #{contenido.cerrar_sesion}
                         li(style="height: 100%")
                           a(href='#' style="height: 70px;" data-toggle="dropdown") #{contenido.idioma}
                             span.caret
@@ -115,7 +116,21 @@ html
               // main-navigation end
             // header-right end
     // header end
-    #banner(style="background: url('http://www.trenvista.net/wp-content/uploads/2015/09/Tren-del-metro-de-Valencia-en-Torrent.jpg'); background-size: cover; background-position: center center; background-repeat: no-repeat; width: 100%; height: 30%;  box-shadow: inset 0px -10px 10px 0px #fff;")          
+    // banner start
+    // ================ 
+    #banner.banner(style="background: url('https://images.unsplash.com/photo-1445964047600-cdbdb873673d?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1800&fit=max&s=e590407728cc89ef57f248ebec481dd5'); background-size: cover; background-position: center center; background-repeat: no-repeat;")
+      .banner-image
+      .banner-caption
+        .container
+          .row
+            .col-md-8.col-md-offset-2.object-non-visible(data-animation-effect='rollIn')
+              h1.text-center
+                | #{contenido.titulo.split(" ")[0]}
+                span Torrent
+              p.lead.text-center
+                | !{contenido.subtitulo}
+    // banner end
+
     // Contenido
     // ================
     block content
@@ -127,13 +142,12 @@ html
       |  
       span#numdenun  !{locals.datos_app.num_denun_total} 
       span#numusu.pull-right
-    script(src='/javascripts/plugins/js-cookie/src/js.cookie.js')
     script.
-      //var ip = '#{locals.ip}';
-      var id_usuario = '#{locals.id_usuario}';
-      //alert(ip + " " + id_usuario);
+      //var ip = '#{ip}';
+      var id_usuario = '#{id_usuario}';
     // Plugins Javascript situados al final de la página, así el contenido carga antes
     // JQuery y Bootstrap
+    script(src='/javascripts/plugins/js-cookie/src/js.cookie.js')
     script(type='text/javascript', src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js')
     script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js', integrity='sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS', crossorigin='anonymous')
     // Modernizr
@@ -142,7 +156,7 @@ html
     script(type='text/javascript', src='/javascripts/plugins/jquery.appear.js')
     // JS Principal
     script(type='text/javascript', src='/javascripts/template.js')
-    // Útiles
+    // Útiles para denuncias, notificaciones, acciones
     script(type='text/javascript', src='/javascripts/utils.js')
     // FitText.js
     script(type='text/javascript', src='/javascripts/plugins/jquery.fittext.js')
@@ -160,6 +174,11 @@ html
 
       var traducciones = JSON.parse('!{JSON.stringify(contenido)}');
 
+      $("h1, h2").each(function(){
+        var fontSize = $(this).css('font-size');
+        console.log(fontSize);
+        $(this).fitText(1.1, {maxFontSize: fontSize});
+      });
       var sms = {};
       if ('#{message.error}' != '') {
         sms.type = 'type-error';
