--- a/views/denuncias/nueva.jade
+++ b/views/denuncias/nueva.jade
@@ -1,4 +1,4 @@
-extends map-layout
+extends ../base/map_layout
 // block link
 block link
 	link(rel="stylesheet" href='//cdnjs.cloudflare.com/ajax/libs/dropzone/3.8.4/css/dropzone.css')
