--- a/views/denuncias/visor.jade
+++ b/views/denuncias/visor.jade
@@ -1,4 +1,4 @@
-extends map-layout
+extends ../base/map_layout
 block script
 	script(src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.1/js/bootstrap-datepicker.js")
 	script(src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.1/locales/bootstrap-datepicker.es.min.js")
