--- a/views/usuarios/perfil.jade
+++ b/views/usuarios/perfil.jade
@@ -45,7 +45,7 @@ block content
 									#notificaciones.panel-collapse.collapse(role='tabpanel', aria-labelledby='headingOne')
 										.panel-body(style='text-align: center;')
 											p.lead ¡#{contenido.tienes}
-												span#has_realizado.lead 
+												span#nuevas.lead 
 													if nuevas
 														|  #{nuevas} 
 													else 
